# mbox

./: readme.md  setenv.sh
scripts/: build.sh  clean.sh  configure.sh  get_dependencies.sh  test.sh
source/: CMakeLists.txt
source/MBox/: CMakeLists.txt  Dictionary.h  Display.c  Display.h  DynamicDictionary.c  DynamicDictionary.h  DynamicList.c  DynamicList.h  DynamicMBox.c  DynamicMBox.h  Error.h  List.h  MBox.h
source/MBox2/: Box.c  Box.h  CMakeLists.txt  Dictionary.c  Dictionary.h  Error.h  FakeBox.c  FakeBox.h  List.c  List.h  MBox.h  Shape.h
source/applications/: CMakeLists.txt  EmbeddedDictionary.c  EmbeddedList.c  HelloMBox2.c  MultiTypeAssignment.c  SimpleDictionaryTest.c  SimpleListTest.c
